--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">PlacarApp</string>
     <string name="label_titulo">Times</string>
     <string name="label_desenvolvido_por">Desenvolvido por Heider Lopes</string>
+    <string name="placar_incial">0</string>
+    <string name="botao_gol">GOL</string>
+    <string name="lblTimeCasa">TIMECASA</string>
+    <string name="lbbTimeVisitante">TIMEVISITANTE</string>
+
 </resources>
