--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
-    <string name="app_name">PlacarApp</string>
-    <string name="label_titulo">Times</string>
-    <string name="label_desenvolvido_por">Desenvolvido por Heider Lopes</string>
-    <string name="placar_incial">0</string>
-    <string name="botao_gol">GOL</string>
+    <string name="app_name" translatable="false">PlacarApp</string>
+    <string name="label_titulo">Teams</string>
+    <string name="label_desenvolvido_por">Developed by Mara</string>
+    <string name="placar_incial" translatable="false">0</string>
+    <string name="botao_gol">GOAL</string>
     <string name="lblTimeCasa">TIMECASA</string>
     <string name="lbbTimeVisitante">TIMEVISITANTE</string>
 
